Fix: intro text-size on mobile

--- a/src/Components/Layout/Layout.module.scss
+++ b/src/Components/Layout/Layout.module.scss
@@ -133,8 +133,8 @@ $text-color: #D74034;
     //     visibility: hidden;
     // }   
     .IntroText{
-        font-size: 2.3em !important; 
-        text-align: center;  
+        font-size: 1.8em !important; 
+        margin-top: .3em !important;
     } 
  }
 
